# Fairy_Chess_GUI

./: .gitignore  Cargo.toml  LICENSE  NOTATION.md  README.md  TERMINAL_COMMANDS.md
assets/: AmazonChess.game  CannonChess.game  CannonChess.pieces  Capablanca.game  Capablanca.pieces  Compounds.pieces  FIDE.game  FIDE.pieces  HippogonalLeapers.pieces  RadialSymmetry.game  Ramazon.game  Ramazon.pieces  RoseChess.game  RoseChess.pieces  StraightLeapers.pieces  Xiangqi.game  Xiangqi.pieces  modiFIDE.game  modiFIDE.pieces  repro.game  repro.pieces
assets/PGNs/: RadialGame.pgn
assets/personalities/: Alice.personality  Anti-Expansionist.personality  Bob.personality  Centrist.personality  ChaosAgent.personality  Containment-Hunter.personality  Containment-Kill.personality  Containment.personality  Expansionist.personality  Flan.personality  Geoff.personality  Gevon.personality  Greta.personality  HyperAggressor.personality  KA0.personality  KA1.personality  KA16.personality  KA2.personality  KA32.personality  KA4.personality  KA64.personality  KA8.personality  KAminus.personality  Krab.personality  Materialist-Aggro.personality  Materialist.personality  Modnar.personality  Wall.personality  (+18 more)
src/: asset_manager.rs  attack_table.rs  background.rs  board_config.rs  console.rs  constants.rs  drawing.rs  evolution.rs  helpers.rs  insufficient_material.rs  lib.rs  main.rs  messages.rs  move_generator.rs  notation.rs  pgn.rs  piece_config.rs  promotion.rs  promotion_dialog.rs  texture_manager.rs  tournament.rs  tournament_graph.rs  zobrist.rs
tests/: comprehensive_engine_tests.rs
(+74 files in other folders)
