# Cargo.toml
[package]
name = "fairy_chess_gui"
version = "1.0.8"
edition = "2024"
authors = ["Peter Smythe <Pds3.14@gmail.com>"]
repository = "https://github.com/Pds314/Fairy_Chess_GUI"
license = "MIT"


[dependencies]
iced = { version = "0.13.1", features = ["canvas", "tokio", "image", "wgpu"] }
rand = "0.9.1"
chrono = "0.4"
smallvec = "1.11"

[dev-dependencies]
tempfile = "3.10"
